--- a/build.config
+++ b/build.config
@@ -28,9 +28,6 @@ CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
 ### Enable IPv6 support
 CONFIG_FIRMWARE_ENABLE_IPV6=y
 
-### Include XFRM (IPsec) modules CONFIG_FIRMWARE_ENABLE_IPV6=y iptables extension ~ 0.2MB
-#CONFIG_FIRMWARE_INCLUDE_XFRM=y
-
 ### Enable USB support
 CONFIG_FIRMWARE_ENABLE_USB=y
 
@@ -71,7 +68,10 @@ CONFIG_FIRMWARE_INCLUDE_HID=y
 #CONFIG_FIRMWARE_INCLUDE_SERIAL=y
 
 ### Include USB-Audio modules ~0.46MB
-CONFIG_FIRMWARE_INCLUDE_AUDIO=y
+#CONFIG_FIRMWARE_INCLUDE_AUDIO=y
+
+### Include XFRM (IPsec) modules & iptables extension ~ 0.2MB
+#CONFIG_FIRMWARE_INCLUDE_XFRM=y
 
 ### Include network QoS scheduling modules. ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_QOS=y
@@ -94,6 +94,7 @@ CONFIG_FIRMWARE_INCLUDE_IPSET=y
 ### Include CIFS (SMB) client. ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_CIFS=y
 
+### Include Shortcut Forward Engine
 CONFIG_FIRMWARE_INCLUDE_SHORTCUT_FE=y
 
 ### Включить сборку бэкпортированных драйверов для медиа устройств
@@ -130,7 +131,10 @@ CONFIG_FIRMWARE_INCLUDE_LPRD=y
 CONFIG_FIRMWARE_INCLUDE_U2EC=y
 
 ### Include "tcpdump" utility. ~0.6MB
-CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
+#CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
+
+### Include "socat" utility
+#CONFIG_FIRMWARE_INCLUDE_SOCAT=y
 
 ### Include "hdparm" utility (allow set HDD spindown timeout and APM). ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_HDPARM=y
@@ -141,9 +145,6 @@ CONFIG_FIRMWARE_INCLUDE_HDPARM=y
 ### Include SMB and WINS server. ~1.5MB
 CONFIG_FIRMWARE_INCLUDE_SMBD=y
 
-### Add support SMB2
-CONFIG_FIRMWARE_INCLUDE_SMBD36=y
-
 ### Include WINS server only. ~0.4MB
 #CONFIG_FIRMWARE_INCLUDE_WINS=y
 
@@ -152,6 +153,7 @@ CONFIG_FIRMWARE_INCLUDE_SMBD36=y
 
 ### Include FTP server. ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_FTPD=y
+CONFIG_FIRMWARE_INCLUDE_FTPD_SSL=y
 
 ### Include alternative L2TP control client RP-L2TP. ~0.1MB
 #CONFIG_FIRMWARE_INCLUDE_RPL2TP=y
@@ -178,19 +180,19 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
 #CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
-CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
+#CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
 ### Include StrongSwan. XFRM modules ~0.2MB, strongswan ~0.7MB
 #CONFIG_FIRMWARE_INCLUDE_SSWAN=y
 
 ### Include Wireguard VPN module and utilite
-CONFIG_FIRMWARE_INCLUDE_WIREGUARD=y
+#CONFIG_FIRMWARE_INCLUDE_WIREGUARD=y
 
 ### Include Elliptic Curves (EC) to openssl library. ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
 
 ### Include "openssl" executable for generate certificates. ~0.4MB
-CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
+#CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 
 ### Include xUPNPd IPTV mediaserver. ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
@@ -198,17 +200,11 @@ CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 ### Include Minidlna UPnP mediaserver. ~1.6MB
 CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
 
-### Include Firefly iTunes mediaserver. ~1.0MB
-#CONFIG_FIRMWARE_INCLUDE_FIREFLY=y
-
-### Include ffmpeg 0.11.x instead of 0.6.x for Minidlna and Firefly. ~0.1MB
-CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=y
-
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
-#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
+CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
 
 ### Include Transmission-Web-Control (advanced WebUI). ~0.8MB
-#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
+CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
 
 ### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
 #CONFIG_FIRMWARE_INCLUDE_ARIA=y
@@ -216,29 +212,32 @@ CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=y
 ### Include Aria2 WEB control. ~0.7MB
 #CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
 
-### Include TOR proxy ~2.3MB
-CONFIG_FIRMWARE_INCLUDE_TOR=y
+### Include TOR proxy ~2.8MB
+#CONFIG_FIRMWARE_INCLUDE_TOR=y
 
-### Include GeoIP database info for TOR proxy ~1.1MB
-CONFIG_FIRMWARE_INCLUDE_TOR_GEOIP=y
+### Include GeoIP database info for TOR proxy ~0.7MB
+#CONFIG_FIRMWARE_INCLUDE_TOR_GEOIP=y
 
-## Include OBFS4 for Tor
-CONFIG_FIRMWARE_INCLUDE_OBFS4=y
-
-### Include IPv6 GeoIP database info for TOR proxy ~1.1MB
+### Include IPv6 GeoIP database info for TOR proxy ~0.6MB
 #CONFIG_FIRMWARE_INCLUDE_TOR_GEOIPV6=y
 
+### Include OBFS4 for TOR
+#CONFIG_FIRMWARE_INCLUDE_OBFS4=y
+
 ### Include Privoxy proxy ~0.3MB
-CONFIG_FIRMWARE_INCLUDE_PRIVOXY=y
+#CONFIG_FIRMWARE_INCLUDE_PRIVOXY=y
 
 ### Include DNSCrypt proxy ~0.5MB
 CONFIG_FIRMWARE_INCLUDE_DNSCRYPT=y
 
-### Include Stubby ~0.5MB
+### Include Stubby DNS-over-TLS (DoT) ~0.5MB
 CONFIG_FIRMWARE_INCLUDE_STUBBY=y
 
+### Include doh_proxy DNS-over-HTTPS (DoH) ~0.4MB
+CONFIG_FIRMWARE_INCLUDE_DOH=y
+
 ### Include WPAD support
-#CONFIG_FIRMWARE_INCLUDE_WPAD=y
+CONFIG_FIRMWARE_INCLUDE_WPAD=y
 
 ### Include compressed memory support
 CONFIG_FIRMWARE_INCLUDE_ZRAM=y
@@ -246,26 +245,21 @@ CONFIG_FIRMWARE_INCLUDE_ZRAM=y
 ### Add adb package
 #CONFIG_FIRMWARE_INCLUDE_ADB=y
 
-### Include LUA support
+### Include LUA support ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_LUA=y
 
-CONFIG_FIRMWARE_INCLUDE_DOH=y
+### Include EoIP Ethernet Tunnels over IP ~0.01MB
+CONFIG_FIRMWARE_INCLUDE_EOIP=y
 
-############################################################
-### Connection settings SSH PROMETHEUS
-############################################################
-### IP
-IPWRT=192.168.1.1
-### Login
-ROOTWRT=admin
-### Password
-PWDR="admin"
-### SSH Port
-ssh_port="22"
-############################################################
-### Add NFQUEUE
-###############
+### Include Curl support ~0.15MB
+CONFIG_FIRMWARE_INCLUDE_CURL=y
+
+### Include KMS Activation support ~0.06MB
+#CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
+
+### Include iPerf3 support ~0.13MB
+#CONFIG_FIRMWARE_INCLUDE_IPERF3=y
+
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=m
 CONFIG_NETFILTER_NETLINK_QUEUE=m
 CONFIG_IP_NF_QUEUE=m
-###############
