--- a/build.config
+++ b/build.config
@@ -13,7 +13,7 @@ CONFIG_FIRMWARE_PRODUCT_ID="MI-MINI"
 CONFIG_FIRMWARE_CPU_600MHZ=y
 
 ### Enable MT7620 CPU sleep mode (downclock to 200MHz on idle)
-#CONFIG_FIRMWARE_CPU_SLEEP=y
+CONFIG_FIRMWARE_CPU_SLEEP=y
 
 ### Kernel driver select for WiFi AP 5GHz
 ### 3.0 = MT7612E v3.0.4.0
